--- a/generic.html
+++ b/generic.html
@@ -88,7 +88,7 @@
 								  <section class="posts">
 									<article>
 										<img  style="
-										width: 650px; 
+										width: 450 px; 
 										height: 600px; 
 										  height: auto;  
 										  text-align:center;  
@@ -98,7 +98,7 @@
 										  }  
 									  src="Screenshot 2024-04-26 212015.png"> </a>
 									  <p style="
-									  width: 650px; 
+									  width: auto; 
 									  height: 700px; 
 									  height: auto;  
 									  text-align:center;  
@@ -113,7 +113,7 @@
 
 								<article>
 									<img  style="
-									width: 650px; 
+									width: 450px; 
 									height: 700px; 
 									  height: auto;  
 									  text-align:center;  
@@ -123,7 +123,7 @@
 									  }  
 								  src="Screenshot 2024-04-26 193757.png"> </a>
 								  <p style="
-								  width: 650px; 
+								  width: auto; 
 								  height: 700px; 
 								  height: auto;  
 								  text-align:center;  
@@ -138,7 +138,7 @@
 
 								  <article>
 									<img  style="
-									width: 650px; 
+									width: 450px; 
 									height: 600px; 
 									  height: auto;  
 									  text-align:center;  
@@ -148,7 +148,7 @@
 									  }  
 								  src="WhatsApp Image 2024-04-26 at 17.00.30_b4208b74.jpg"> </a>
 								  <p style="
-								  width: 650px; 
+								  width: auto; 
 								  height: 700px; 
 								  height: auto;  
 								  text-align:center;  
@@ -162,7 +162,7 @@
 								  
 								  <article>
 									<img  style="
-									width: 650px; 
+									width: 450px; 
 									height: 600px; 
 									  height: auto;  
 									  text-align:center;  
@@ -185,7 +185,7 @@
 								  </article>
 								  <article>
 									<img  style="
-									  width: 650px; 
+									  width: 450px; 
 									  height: 700px; 
 									  height: auto;  
 									  text-align:center;  
@@ -195,7 +195,7 @@
 									  }  
 								  src="WebGis.png"></a>
 								  <p style="
-								  width: 650px; 
+								  width: auto; 
 								  height: 700px; 
 								  height: auto;  
 								  text-align:center;  
