--- a/generic.html
+++ b/generic.html
@@ -98,7 +98,7 @@
 										  }  
 									  src="Screenshot 2024-04-26 212015.png"> </a>
 									  <p style="
-									  width: auto; 
+									  width: 450; 
 									  height: 700px; 
 									  height: auto;  
 									  text-align:center;  
