--- a/generic.html
+++ b/generic.html
@@ -88,8 +88,8 @@
 								  <section class="posts">
 									<article>
 										<img  style="
-										width: 450 px; 
-										height: 600px; 
+										width: 300 px; 
+										 
 										  height: auto;  
 										  text-align:center;  
 										  padding: 15px; "
@@ -98,8 +98,7 @@
 										  }  
 									  src="Screenshot 2024-04-26 212015.png"> </a>
 									  <p style="
-									  width: 450; 
-									  height: 700px; 
+									  width: auto;
 									  height: auto;  
 									  text-align:center;  
 									  padding: 15px;  
