--- a/generic.html
+++ b/generic.html
@@ -88,14 +88,14 @@
 								  <section class="posts">
 									<article>
 										<img  style="
-										width: 300 px; 
-										 
+										width: 150px; 
+										height: 300px; 
 										  height: auto;  
 										  text-align:center;  
 										  padding: 15px; "
 										  img {  
 										  object-fit: cover;  
-										  }  
+										  }    
 									  src="Screenshot 2024-04-26 212015.png"> </a>
 									  <p style="
 									  width: auto;
