--- a/generic.html
+++ b/generic.html
@@ -96,7 +96,7 @@
 										  img {  
 										  object-fit: cover;  
 										  }    
-									  src="Screenshot 2024-04-26 212015.png"> </a>
+									  src=""> </a>
 									  <p style="
 									  width: auto;
 									  height: auto;  
