--- a/generic.html
+++ b/generic.html
@@ -87,8 +87,9 @@
 								  
 								  <section class="posts">
 									<article>
+										
 										<img  style="
-										width: 150px; 
+										width: 300px; 
 										height: 300px; 
 										  height: auto;  
 										  text-align:center;  
@@ -96,7 +97,7 @@
 										  img {  
 										  object-fit: cover;  
 										  }    
-									  src=""> </a>
+									  src="Screenshot 2024-04-26 212015.png"> </a>
 									  <p style="
 									  width: auto;
 									  height: auto;  
