--- a/elements.html
+++ b/elements.html
@@ -55,7 +55,7 @@
 								<section class="posts">
 									
 									<article>
-										<h2>Survey Camp I </h2>
+										<h2>Survey Camp II </h2>
 										
 									<p style="
 									width: auto; 
